cec-follower: add --standby and --toggle-power-status
Add the --standby option to start the follower with the device
in Standby status.

Add the --toggle-power-status <secs> option to let the follower
toggle the emulated power status every <secs> seconds. This helps
testing power status transtions.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/cec-follower/cec-follower.1.in
+++ b/utils/cec-follower/cec-follower.1.in
@@ -85,6 +85,13 @@ Show state changes from the emulated device.
 \fB\-\-service\-by\-dig\-id\fR
 Report digital services by digital ID instead of by channel.
 .TP
+\fB\-\-standby\fR
+Start the follower in the Standby status.
+.TP
+\fB\-\-toggle\-power\-status\fR \fI<secs>\fR
+Toggle the power status every <secs> seconds. Only supported if the follower
+is emulating a TV.
+.TP
 \fB\-i\fR, \fB\-\-ignore\fR \fI<la>,<opcode>\fR
 Ignore messages from logical address \fI<la>\fR and opcode
 \fI<opcode>\fR. 'all' can be used for \fI<la>\fR or \fI<opcode>\fR to match
