--- a/doxygen_libdvbv5.cfg
+++ b/doxygen_libdvbv5.cfg
@@ -776,6 +776,7 @@ INPUT                  = $(SRCDIR)/doc/libdvbv5-index.doc \
 			 $(SRCDIR)/lib/include/libdvbv5/desc_event_extended.h \
 			 $(SRCDIR)/lib/include/libdvbv5/desc_event_short.h \
 			 $(SRCDIR)/lib/include/libdvbv5/desc_extension.h \
+			 $(SRCDIR)/lib/include/libdvbv5/desc_descriptor_id.h \
 			 $(SRCDIR)/lib/include/libdvbv5/desc_frequency_list.h \
 			 $(SRCDIR)/lib/include/libdvbv5/desc_hierarchy.h \
 			 $(SRCDIR)/lib/include/libdvbv5/desc_isdbt_delivery.h \
