v4l-utils: sync with media_tree master
The FWHT stateless codec API is now an official public API,
so this required a few changes.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/keytable/rc_maps.cfg
+++ b/utils/keytable/rc_maps.cfg
@@ -92,6 +92,7 @@
 *	rc-it913x-v2             it913x_v2.toml
 *	rc-kaiomy                kaiomy.toml
 *	rc-khadas                khadas.toml
+*	rc-khamsin               khamsin.toml
 *	rc-kworld-315u           kworld_315u.toml
 *	rc-kworld-pc150u         kworld_pc150u.toml
 *	rc-kworld-plus-tv-analog kworld_plus_tv_analog.toml
