v4l-utils: sync with latest media_tree master repo
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/keytable/rc_maps.cfg
+++ b/utils/keytable/rc_maps.cfg
@@ -112,6 +112,7 @@
 *	rc-npgtech               npgtech.toml
 *	rc-odroid                odroid.toml
 *	rc-pctv-sedna            pctv_sedna.toml
+*	rc-pine64                pine64.toml
 *	rc-pinnacle-color        pinnacle_color.toml
 *	rc-pinnacle-grey         pinnacle_grey.toml
 *	rc-pinnacle-pctv-hd      pinnacle_pctv_hd.toml
