--- a/utils/keytable/50-rc_keymap.conf
+++ b/utils/keytable/50-rc_keymap.conf
@@ -1,3 +1,3 @@
-# ir-keytable needs access to bpf in order load BPF decoders
+# ir-keytable needs access to bpf in order to load BPF decoders
 [Service]
 SystemCallFilter=bpf
