v4l-utils: sync with upstream media_tree master
Update to the latest kernel media headers.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/keytable/rc_maps.cfg
+++ b/utils/keytable/rc_maps.cfg
@@ -99,6 +99,8 @@
 *	rc-leadtek-y04g0051      leadtek_y04g0051.toml
 *	rc-lme2510               lme2510.toml
 *	rc-manli                 manli.toml
+*	rc-mecool-kii-pro        mecool_kii_pro.toml
+*	rc-mecool-kiii-pro       mecool_kiii_pro.toml
 *	rc-medion-x10-digitainer medion_x10_digitainer.toml
 *	rc-medion-x10-or2x       medion_x10_or2x.toml
 *	rc-medion-x10            medion_x10.toml
@@ -131,7 +133,6 @@
 *	rc-snapstream-firefly    snapstream_firefly.toml
 *	rc-streamzap             streamzap.toml
 *	rc-su3000                su3000.toml
-*	rc-tango                 tango.toml
 *	rc-tanix-tx3mini         tanix_tx3mini.toml
 *	rc-tanix-tx5max          tanix_tx5max.toml
 *	rc-tbs-nec               tbs_nec.toml
