configure.ac, Makefile.am: Support building without NLS
Avoid entering the v4l-utils-po and libdvbv5-po directories if NLS
support is disabled, as the generated Makefiles in those directories are
empty then.

Signed-off-by: Peter Kjellerstedt <peter.kjellerstedt@axis.com>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,11 @@ AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS = -I m4
 AM_MAKEFLAGS = $(word 1, $(subst 1, -w, $(filter 1, $(V))) --no-print-directory)
 
-SUBDIRS = v4l-utils-po libdvbv5-po lib
+SUBDIRS = lib
+
+if USE_NLS
+SUBDIRS += v4l-utils-po libdvbv5-po
+endif
 
 if WITH_V4LUTILS
 SUBDIRS += utils contrib
