cec-follower: add --ignore-standby/view-on options
These options are useful to test what happens if Standby or
Image/Text View On messages are lost every so often.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/cec-follower/cec-follower.1.in
+++ b/utils/cec-follower/cec-follower.1.in
@@ -96,6 +96,12 @@ is emulating a TV.
 Ignore messages from logical address \fI<la>\fR and opcode
 \fI<opcode>\fR. 'all' can be used for \fI<la>\fR or \fI<opcode>\fR to match
 all logical addresses or opcodes.
+.TP
+\fB\-\-ignore\-standby\fR \fI<n>\fR
+Ignore every <n>th received Standby message.
+.TP
+\fB\-\-ignore\-view\-on\fR \fI<n>\fR
+Ignore every <n>th received Image/Text View On message.
 
 .SH EXIT STATUS
 On success, it returns 0. Otherwise, it will return the error code.
