v4l2-tracer: check for strerrorname_np()
The v4l2-tracer converts the errno integer to a string using
strerrorname_np().  Check if this function is available and,
if not, use strerror() instead.

Signed-off-by: Deborah Brouwer <deborah.brouwer@collabora.com>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/configure.ac
+++ b/configure.ac
@@ -323,6 +323,8 @@ if test "x$jsonc_pkgconfig" = "xno"; then
     AC_MSG_WARN(json-c $JSONC_VERSION_REQUIRED or higher required for v4l2-tracer)
 fi
 
+AC_CHECK_FUNCS([strerrorname_np], AC_DEFINE([HAVE_STRERRORNAME_NP],[1],[glibc has function strerrorname_np]))
+
 # Check for pthread
 
 AS_IF([test x$enable_shared != xno],
