xc3028-firmware: distribute proper header

--- a/contrib/xc3028-firmware/Makefile.am
+++ b/contrib/xc3028-firmware/Makefile.am
@@ -1,5 +1,5 @@
 noinst_PROGRAMS = firmware-tool
 
-firmware_tool_SOURCES = firmware-tool.c standards.c extract_head.h standards.h tuner-xc2028-types.h
+firmware_tool_SOURCES = firmware-tool.c standards.c extract_head.h standards.h xc2028-types.h
 
 EXTRA_DIST = README
