configure.ac: fix gconv directory search
By default the gconv libraries are installed in /usr/local/lib/gconv,
but the search for the default gconv system directory also checks that.

So the first time this will find the correct directory (/usr/lib/...),
but after installing gconv it will find /usr/local/lib/gconv and use
that as the link directory for libJIS.so, but that library isn't
there, so the build will fail.

Change the search order to check the /usr/local directories last.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/configure.ac
+++ b/configure.ac
@@ -413,11 +413,15 @@ AS_IF([test "x$with_systemdsystemunitdir" = "xyes" -o "x$with_systemdsystemunitd
 AM_CONDITIONAL([HAVE_SYSTEMD], [test "x$with_systemdsystemunitdir" != "xno"])
 
 # Generic check: works with most distributions
-def_gconv_dir=`for i in /lib64 /usr/lib64 /usr/local/lib64 /lib /usr/lib /usr/local/lib; do if @<:@ -d \$i/gconv @:>@; then echo \$i/gconv; break; fi; done`
+def_gconv_dir=`for i in /lib64 /usr/lib64 /lib /usr/lib; do if @<:@ -d \$i/gconv @:>@; then echo \$i/gconv; break; fi; done`
 
 # Debian/Ubuntu-specific check: should be aligned with the debian package
 AS_IF([test "x${def_gconv_dir}" = "x" ],
       def_gconv_dir=`for i in mips64el-linux-gnuabi64 mips64el-linux-gnuabin32 mips64-linux-gnuabi64 mips64-linux-gnuabin32 mipsisa64r6el-linux-gnuabi64 mipsisa64r6el-linux-gnuabin32 mipsisa64r6-linux-gnuabi64 mipsisa64r6-linux-gnuabin32 powerpc64-linux-gnu sparc64-linux-gnu x86_64-linux-gnu x86_64-linux-gnux32 alphaev67-linux-gnu arm-linux-gnueabi arm-linux-gnueabihf i686-kfreebsd-gnu i686-linux-gnu mipsel-linux-gnu mipsisa32r6el-linux-gnu mipsisa32r6-linux-gnu mips-linux-gnu powerpc-linux-gnu s390-linux-gnu sparcv9-linux-gnu; do if @<:@ -d /usr/lib/\$i/gconv @:>@; then echo /usr/lib/\$i/gconv; break; fi; done`)
+
+# Final check for /usr/local directories
+AS_IF([test "x${def_gconv_dir}" = "x" ],
+	def_gconv_dir=`for i in /usr/local/lib64 /usr/local/lib; do if @<:@ -e \$i/gconv/libJIS.so @:>@; then echo \$i/gconv; break; fi; done`)
 
 AC_ARG_WITH(gconvdir,
 	AS_HELP_STRING([--with-gconvdir=DIR],
