v4l-utils: sync with upstream media staging kernel.
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/keytable/rc_maps.cfg
+++ b/utils/keytable/rc_maps.cfg
@@ -49,6 +49,7 @@
 *	rc-avertv-303            avertv_303.toml
 *	rc-azurewave-ad-tu700    azurewave_ad_tu700.toml
 *	rc-beelink-gs1           beelink_gs1.toml
+*	rc-beelink-mxiii         beelink_mxiii.toml
 *	rc-behold-columbus       behold_columbus.toml
 *	rc-behold                behold.toml
 *	rc-budget-ci-old         budget_ci_old.toml
@@ -65,6 +66,7 @@
 *	rc-dm1105-nec            dm1105_nec.toml
 *	rc-dntv-live-dvb-t       dntv_live_dvb_t.toml
 *	rc-dntv-live-dvbt-pro    dntv_live_dvbt_pro.toml
+*	rc-dreambox              dreambox.toml
 *	rc-dtt200u               dtt200u.toml
 *	rc-dvbsky                dvbsky.toml
 *	rc-dvico-mce             dvico_mce.toml
