--- a/utils/keytable/rc_keymaps/meson.build
+++ b/utils/keytable/rc_keymaps/meson.build
@@ -11,24 +11,26 @@ ir_keytable_rc_keymaps = files(
     'asus_ps3_100.toml',
     'ati_tv_wonder_hd_600.toml',
     'ati_x10.toml',
-    'avermedia.toml',
     'avermedia_a16d.toml',
     'avermedia_cardbus.toml',
     'avermedia_dvbt.toml',
     'avermedia_m135a.toml',
     'avermedia_m733a_rm_k6.toml',
     'avermedia_rm_ks.toml',
+    'avermedia.toml',
     'avertv_303.toml',
     'az6027.toml',
     'azurewave_ad_tu700.toml',
     'beelink_gs1.toml',
-    'behold.toml',
+    'beelink_mxiii.toml',
     'behold_columbus.toml',
+    'behold.toml',
     'budget_ci_old.toml',
     'cec.toml',
-    'cinergy.toml',
     'cinergy_1400.toml',
     'cinergyt2.toml',
+    'cinergy.toml',
+    'ct_90405.toml',
     'd680_dmb.toml',
     'delock_61959.toml',
     'dib0700_nec.toml',
@@ -39,16 +41,18 @@ ir_keytable_rc_keymaps = files(
     'digitv.toml',
     'dish_network.toml',
     'dm1105_nec.toml',
-    'dntv_live_dvb_t.toml',
     'dntv_live_dvbt_pro.toml',
+    'dntv_live_dvb_t.toml',
+    'dreambox.toml',
     'dtt200u.toml',
     'dvbsky.toml',
     'dvico_mce.toml',
     'dvico_portable.toml',
+    'empty.toml',
     'em_terratec.toml',
-    'encore_enltv.toml',
     'encore_enltv2.toml',
     'encore_enltv_fm53.toml',
+    'encore_enltv.toml',
     'evga_indtube.toml',
     'eztv.toml',
     'flydvb.toml',
@@ -58,8 +62,8 @@ ir_keytable_rc_keymaps = files(
     'geekbox.toml',
     'genius_tvgo_a11mce.toml',
     'gotview7135.toml',
-    'haupp.toml',
     'hauppauge.toml',
+    'haupp.toml',
     'hisi_poplar.toml',
     'hisi_tv_demo.toml',
     'imon_mce.toml',
@@ -79,15 +83,17 @@ ir_keytable_rc_keymaps = files(
     'lme2510.toml',
     'manli.toml',
     'mce_keyboard.toml',
-    'medion_x10.toml',
+    'mecool_kiii_pro.toml',
+    'mecool_kii_pro.toml',
     'medion_x10_digitainer.toml',
     'medion_x10_or2x.toml',
+    'medion_x10.toml',
     'megasky.toml',
     'minix_neo.toml',
-    'msi_digivox_ii.toml',
     'msi_digivox_iii.toml',
-    'msi_tvanywhere.toml',
+    'msi_digivox_ii.toml',
     'msi_tvanywhere_plus.toml',
+    'msi_tvanywhere.toml',
     'nebula.toml',
     'nec_terratec_cinergy_xs.toml',
     'norwood.toml',
@@ -100,10 +106,10 @@ ir_keytable_rc_keymaps = files(
     'pinnacle_color.toml',
     'pinnacle_grey.toml',
     'pinnacle_pctv_hd.toml',
-    'pixelview.toml',
     'pixelview_002t.toml',
     'pixelview_mk12.toml',
     'pixelview_new.toml',
+    'pixelview.toml',
     'powercolor_real_angel.toml',
     'proteus_2309.toml',
     'purpletv.toml',
@@ -123,12 +129,12 @@ ir_keytable_rc_keymaps = files(
     'terratec_cinergy_c_pci.toml',
     'terratec_cinergy_s2_hd.toml',
     'terratec_cinergy_xs.toml',
-    'terratec_slim.toml',
     'terratec_slim_2.toml',
+    'terratec_slim.toml',
     'tevii_nec.toml',
     'tivo.toml',
-    'total_media_in_hand.toml',
     'total_media_in_hand_02.toml',
+    'total_media_in_hand.toml',
     'trekstor.toml',
     'tt_1500.toml',
     'tvwalkertwin.toml',
