meson: Fix libbpf detection
The libbpf pkgconfig package is called libbpf.pc, not bpf.pc. Fix the
library detection by using the proper name.

Signed-off-by: Laurent Pinchart <laurent.pinchart@ideasonboard.com>
Reviewed-by: Mauro Carvalho Chehab <mchehab@kernel.org>

--- a/meson.build
+++ b/meson.build
@@ -80,7 +80,7 @@ dep_librt = cc.find_library('rt')
 dep_qt5 = dependency('qt5', modules: ['Core', 'Gui', 'Widgets', 'OpenGL'],
                      required : get_option('qvidcap').enabled() or get_option('qv4l2').enabled())
 
-dep_libbpf = dependency('bpf', required : get_option('bpf'), version : '>=0.7')
+dep_libbpf = dependency('libbpf', required : get_option('bpf'), version : '>=0.7')
 
 dep_sdl = dependency('SDL2', required: false)
 if not dep_sdl.found()
